# twag

./: .env.example  .gitignore  APPLE_APP_STORE.md  README.md  capacitor.config.ts  package-lock.json  package.json  pyproject.toml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
data/bostontw-2026-for-agents/: manifest.json  users.json  venues.json
data/nytw-2026-for-agents/: .gitignore  CHANGES-2026-05-30.md  CLAUDE.md  HOST-STATS.md  INDEX.md  README.md  SKILL.md  manifest.json  users.json  venues.json
deploy/ubuntu/: control.sh  install-after-rsync.sh  twag-telegram-agent-boston@.service  twag-telegram-agent@.service  twag.env.example
docs/: CNAME  app_teaser.js  boston.geojson  boston_gallery.json  capacitor_bridge.js  city_nav.js  config.example.js  config.js  datadog-setup.md  datadog.js  events_gallery.js  events_gallery_boston.html  events_gallery_nyc.html  events_map.css  events_map.js  events_map_boston.html  events_map_nyc.html  events_map_sidebar.js  index.html  nyc.geojson  nyc_gallery.json  posthog-setup.md  posthog.js  privacy.html  search.js  tab_nav.js  telegram-bot-setup.md  terms.html
docs/plans/: app-store-metadata.md  capacitor-native-app.md  event-map-view.md  map-sidebar-viewport-events.md  (+8 more)
eval/: README.md  __init__.py  cities.py  dataset.py  extractor.py  run.py  tracing.py
plans/: plan.md
tests/: test_city.py  test_cli.py  test_client.py  test_pin_geometry.py  test_pin_guardrail.py  test_pin_tracing.py  test_senso.py  test_subconscious_agent.py  test_telegram_agent.py  test_tool_server.py
(+2240 files in other folders)
